# saathi-adoption-copilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
backend/: __init__.py  agent.py  app.py  journey.py  llm.py  rules.py  store.py
data/: customers.json  products.json
docs/: Saathi_Idea_Deck.pptx  architecture.md
frontend/: index.html
